--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dynamic-word-counter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://brianacowles.com/dynamic_word_counter/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
